// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownButton should renders properly 1`] = `
<DropdownButton
  id="dropdown-button-test-default"
  title="default"
>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="1"
    header={false}
  >
    Action
  </MenuItem>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="2"
    header={false}
  >
    Another action
  </MenuItem>
  <MenuItem
    active={true}
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="3"
    header={false}
  >
    Active Item
  </MenuItem>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={true}
    header={false}
  />
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="4"
    header={false}
  >
    Separated link
  </MenuItem>
</DropdownButton>
`;

exports[`DropdownButton should renders properly 2`] = `
<DropdownButton
  id="dropdown-button-test-primary"
  title="primary"
>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="1"
    header={false}
  >
    Action
  </MenuItem>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="2"
    header={false}
  >
    Another action
  </MenuItem>
  <MenuItem
    active={true}
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="3"
    header={false}
  >
    Active Item
  </MenuItem>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={true}
    header={false}
  />
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="4"
    header={false}
  >
    Separated link
  </MenuItem>
</DropdownButton>
`;

exports[`DropdownButton should renders properly 3`] = `
<DropdownButton
  id="dropdown-button-test-success"
  title="success"
>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="1"
    header={false}
  >
    Action
  </MenuItem>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="2"
    header={false}
  >
    Another action
  </MenuItem>
  <MenuItem
    active={true}
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="3"
    header={false}
  >
    Active Item
  </MenuItem>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={true}
    header={false}
  />
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="4"
    header={false}
  >
    Separated link
  </MenuItem>
</DropdownButton>
`;

exports[`DropdownButton should renders properly 4`] = `
<DropdownButton
  id="dropdown-button-test-warning"
  title="warning"
>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="1"
    header={false}
  >
    Action
  </MenuItem>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="2"
    header={false}
  >
    Another action
  </MenuItem>
  <MenuItem
    active={true}
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="3"
    header={false}
  >
    Active Item
  </MenuItem>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={true}
    header={false}
  />
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="4"
    header={false}
  >
    Separated link
  </MenuItem>
</DropdownButton>
`;

exports[`DropdownButton should renders properly 5`] = `
<DropdownButton
  id="dropdown-button-test-danger"
  title="danger"
>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="1"
    header={false}
  >
    Action
  </MenuItem>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="2"
    header={false}
  >
    Another action
  </MenuItem>
  <MenuItem
    active={true}
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="3"
    header={false}
  >
    Active Item
  </MenuItem>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={true}
    header={false}
  />
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="4"
    header={false}
  >
    Separated link
  </MenuItem>
</DropdownButton>
`;

exports[`DropdownButton should renders properly 6`] = `
<DropdownButton
  id="dropdown-button-test-info"
  title="info"
>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="1"
    header={false}
  >
    Action
  </MenuItem>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="2"
    header={false}
  >
    Another action
  </MenuItem>
  <MenuItem
    active={true}
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="3"
    header={false}
  >
    Active Item
  </MenuItem>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={true}
    header={false}
  />
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="4"
    header={false}
  >
    Separated link
  </MenuItem>
</DropdownButton>
`;

exports[`DropdownButton should renders properly 7`] = `
<DropdownButton
  id="dropdown-button-test-link"
  title="link"
>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="1"
    header={false}
  >
    Action
  </MenuItem>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="2"
    header={false}
  >
    Another action
  </MenuItem>
  <MenuItem
    active={true}
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="3"
    header={false}
  >
    Active Item
  </MenuItem>
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={true}
    header={false}
  />
  <MenuItem
    bsClass="dropdown"
    disabled={false}
    divider={false}
    eventKey="4"
    header={false}
  >
    Separated link
  </MenuItem>
</DropdownButton>
`;
